添加chuxinhudong的适配sdk